feat: 음추 데이터 저장, 먹먹보 변경시 갱신